--- a/www/index.html
+++ b/www/index.html
@@ -21,14 +21,19 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+    <body ng-app="starter">
+        <ion-pane>
+            <ion-header-bar class="bar-stable">
+                <h1 class="title">Simple RSS Reader</h1>
+            </ion-header-bar>
+            <ion-content ng-controller="FeedController" ng-init="init()">
+                <div class="list">
+                    <div ng-repeat="entry in entries" class="item">
+                        <b>{{entry.title}}</b><br>
+                        <span ng-bind-html="entry.contentSnippet"></span>
+                    </div>
+                </div>
+            </ion-content>
+        </ion-pane>
+    </body>
 </html>
